@startuml database

entity school {
  id: TEXT NOT NULL PRIMARY KEY
  --
  name: TEXT NOT NULL
}

entity classroom {
  id: TEXT NOT NULL PRIMARY KEY
  --
  school_id: TEXT NOT NULL
  grade: INTEGER NOT NULL
  name: TEXT NOT NULL
  password_hash: TEXT NOT NULL
  --
  UNIQUE("school_id", "grade", "name")
}

entity teacher {
  id: TEXT
  --
  class_id: TEXT
  email: TEXT
  password_hash: TEXT
}

entity day_status {
  class_id: TEXT NOT NULL
  point: INTEGER NOT NULL
  attend: INTEGER
  date: TEXT(date) NOT NULL
}

entity sensor_log {
  class_id: TEXT
  time: TEXT(datetime)
  values: TEXT(json)
}

entity checklist {
  student_id(出席番号): TEXT
  class_id: TEXT
  list: TEXT(json)
}

entity class_token {
  token: TEXT NOT NULL PRIMARY KEY
  --
  class_id: TEXT NOT NULL
}

entity teacher_token {
  token: TEXT NOT NULL PRIMARY KEY
  --
  teacher_id: TEXT NOT NULL
}

entity student_token {
  token: TEXT NOT NULL PRIMARY KEY
  --
  student_id(出席番号): INTEGER NOT NULL
  class_id: TEXT NOT NULL
}

school ||..|{ classroom
classroom ||..|{ day_status
classroom ||..|{ sensor_log

classroom ||..|{ class_token
teacher ||..|{ teacher_token

@enduml